--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -10,8 +10,7 @@
   <div class="section">
     <h1>Willkommen zur Ticket2Rock Beispielanwendung</h1>   
     <p>Die JSF-basierte Webanwendung kommuniziert &#252;ber einen Business Delegates mit  
-    Session Beans, die als Session Facade entprechende Dienste anbieten.
-    
+    Session Beans, die als Session Facade entprechende Dienste anbieten.    
     </p>  
   </div>
  	
@@ -20,9 +19,9 @@
 <!-- sidebar -->
 <ui:define name="sidebar">
  <p>
- Mit dem dem Menuepunkt <em>Verwaltung</em> koennen Entitaeten
-(Datensaetze) in den Ticket2Rock Datenbanktabellen angelegt, veraendert bzw. geloescht werden.
-Der Menuepunkt <em>Andwendungsfall</em> dient zur Ausfuehrung diverser Anwendungsfaelle.
+ Mit dem dem Men&#252;punkt <em>Verwaltung</em> koennen Entit&#228;ten
+(Datens&#228;tze) in den Ticket2Rock Datenbanktabellen angelegt, ver&#228;ndert bzw. geloescht werden.
+Der Men&#252;punkt <em>Andwendungsfall</em> dient zur Ausf&#252;hrung diverser Anwendungsf&#228;lle.
 </p> 
 </ui:define>
 
