--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -5,12 +5,13 @@
       xmlns:f="http://java.sun.com/jsf/core">
 <head>
 	<meta http-equiv="Content-Type" content="text/html" />
-	<title>JBoss Seam Facelets Test</title>
+	<title>EJB3Buch Beispielanwendung</title>
 	<link href="style/screen.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="style/office_xp/office_xp.css" />
     <script type="text/javascript" src="./js/jsdomenu.js"></script>
     <script type="text/javascript" src="./js/jsdomenubar.js"></script>
-    <script type="text/javascript" src="js/ticket2rock.inc.js"></script>
+    <script type="text/javascript" src="./js/ticket2rock.inc.js"></script>
+    <script type="text/javascript" src="./js/utils.js"></script>
 </head>
 <body onload="initjsDOMenu()">
 <f:loadBundle basename="de.ejb3buch.ticket2rock.applikation.resources.Message" var="msg" />
