Über MultiSelectBoxen können einer Band Musiker zugewiesen werden

--- a/web/bandlist.xhtml
+++ b/web/bandlist.xhtml
@@ -11,7 +11,7 @@
   <div class="section">
   		<h:form>
 			<h:dataTable id="items" value="#{T2RManagerBean.bands}" var="band"
-				rowClasses="oddRow, evenRow" headerClass="tableHeader">
+				 styleClass="datatable">
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Bandname" />
