--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 <head>
 	<meta http-equiv="Content-Type" content="text/html" />
-	<title>EJB3Buch Beispielanwendung</title>
+	<title>Beispielanwendung</title>
 	<link href="style/screen.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="style/office_xp/office_xp.css" />
     <script type="text/javascript" src="./js/jsdomenu.js"></script>
