implemented use case for konzertsuche

--- a/web/konzertsuchErgebnis.xhtml
+++ b/web/konzertsuchErgebnis.xhtml
@@ -50,7 +50,7 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Ergebnis einer Suche nach Konzerten.
+Ergebnis der Konzertsuche.
 </ui:define>
 
 </ui:composition>
