Verwaltung/Tournee begonnen

--- a/web/konzertsuchErgebnis.xhtml
+++ b/web/konzertsuchErgebnis.xhtml
@@ -19,7 +19,8 @@
 					<f:facet name="header">
 						<h:outputText value="#{msg.konzertsuchergebnis_location}" />
 					</f:facet>
-					<h:outputText value="#{konzert.ort.name}" />
+					<h:outputText value="#{konzert.ort.name}" />,
+					<h:outputText value="#{konzert.ort.adresse}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
