--- a/web/konzertsuchErgebnis.xhtml
+++ b/web/konzertsuchErgebnis.xhtml
@@ -4,6 +4,7 @@
 	  			xmlns:h="http://java.sun.com/jsf/html"
 	  			xmlns:f="http://java.sun.com/jsf/core"
 	  			xmlns:c="http://java.sun.com/jsp/jstl/core"
+	  			xmlns:t="http://myfaces.apache.org/tomahawk"
 				template="template.xhtml">
 
 <!-- content -->
@@ -13,15 +14,20 @@
   </div>
   <div class="section">
   		<h:form>
-			<h:dataTable id="items" value="#{SuchController.konzertSuchErgebnis}" var="konzert"
+			<h:dataTable id="items" value="#{KonzertController.konzertSuchErgebnis}" var="konzert"
 				 styleClass="datatable">
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="#{msg.konzertsuchergebnis_address}" />
+					</f:facet>
+					<h:outputText value="#{konzert.ort.adresse}" />
+				</h:column>	
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="#{msg.konzertsuchergebnis_location}" />
 					</f:facet>
-					<h:outputText value="#{konzert.ort.name}" />,
-					<h:outputText value="#{konzert.ort.adresse}" />
-				</h:column>
+					<h:outputText value="#{konzert.ort.name}" />
+				</h:column>			
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="#{msg.konzertsuchergebnis_date}" />
@@ -41,11 +47,20 @@
 						<h:outputText value="#{msg.konzertsuchergebnis_tournee}" />
 					</f:facet>
 					<h:outputText value="#{konzert.tournee.name}" />
+				</h:column>			
+				<h:column>
+   				    <f:facet name="header">
+						<h:outputText value="#{msg.konzertsuchergebnis_actionheader}" />
+				    </f:facet>	
+   			           <h:commandButton id="book" class="button" action="#{KonzertController.selectConcert}" 
+						value="#{msg.konzertsuchergebnis_booktickets}" rendered="#{konzert.ticketkontingent > 0}" />
+						<h:outputText style="font-weight: bold" value="#{msg.konzertsuchergebnis_soldout}" rendered="#{konzert.ticketkontingent == 0}" />
 				</h:column>
 			</h:dataTable>
 			<br />
-            <h:commandButton class="button" action="newSearch" value="#{msg.konzertsuchergebnis_newsearch}" />						
+           <h:commandButton class="button" action="newSearch" value="#{msg.konzertsuchergebnis_newsearch}" />						
 		</h:form>
+
   </div>		
 </ui:define>
 
