--- a/web/ticketbestellung.xhtml
+++ b/web/ticketbestellung.xhtml
@@ -18,14 +18,14 @@
           <h:outputText id="interpret" value="#{TicketController.konzert.interpret.name}" />
           <h:outputLabel for="date" value="#{msg.ticketbestellung_date}" />
           <h:outputText id="date" value="#{TicketController.konzert.datum}" />
-          <h:outputLabel value="#{msg.ticketbestellung_location}" />
-          <h:outputText value="#{TicketController.konzert.ort.name}" />
-          <h:outputLabel value="#{msg.ticketbestellung_address}" />
-          <h:outputText value="#{TicketController.konzert.ort.adresse}" />
-          <h:outputLabel value="#{msg.ticketbestellung_tournee}" />
-          <h:outputText value="#{TicketController.konzert.tournee.name}" />
-          <h:outputLabel value="#{msg.ticketbestellung_ticketkontingent}" />
-          <h:outputText value="#{TicketController.availableTicketsExpression}" />
+          <h:outputLabel for="location" value="#{msg.ticketbestellung_location}" />
+          <h:outputText id="location" value="#{TicketController.konzert.ort.name}" />
+          <h:outputLabel for="ort" value="#{msg.ticketbestellung_address}" />
+          <h:outputText id="ort" value="#{TicketController.konzert.ort.adresse}" />
+          <h:outputLabel for="tourneename" value="#{msg.ticketbestellung_tournee}" />
+          <h:outputText id="tourneename" value="#{TicketController.konzert.tournee.name}" />
+          <h:outputLabel for="aivalableExpresseion" value="#{msg.ticketbestellung_ticketkontingent}" />
+          <h:outputText id="availableExpression" value="#{TicketController.availableTicketsExpression}" />
        </h:panelGrid>
       
 	  <fieldset>
