Ticketbestellungen werden durch PrePersist callback Methode der Kunden-Entity Bean persisitiert.

--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -9,8 +9,7 @@
 <ui:define name="content">
   <div class="section">
     <h1>Willkommen zur Ticket2Rock Beispielanwendung</h1>   
-    <p>Die JSF-basierte Webanwendung kommuniziert &#252;ber einen Business Delegates mit  
-    Session Beans, die als Session Facade entprechende Dienste anbieten.    
+    <p>Die Beispielapplikation zum Buch "EJB3 Professionell"    
     </p>  
   </div>
  	
