Texte und Layout überarbeitet

--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -8,9 +8,10 @@
 <!-- content -->
 <ui:define name="content">
   <div class="section">
-    <h1>Willkommen zur Ticket2Rock Beispielanwendung</h1>   
-    <p>Die Beispielapplikation zum Buch "EJB3 Professionell"    
-    </p>  
+    <h1>Willkommen bei Ticket2Rock!</h1>   
+    <p>Dies ist die Beispielapplikation zum Buch "EJB 3 professionell" (dpunkt-Verlag).</p>
+    <p>Weitere Informationen zu dieser Applikation und zum Buch finden Sie unter</p>
+    <div align="center"><a target="_ejb3buch_" href="http://www.ejb3buch.de">www.ejb3buch.de</a></div>
   </div>
  	
 </ui:define>
@@ -18,9 +19,8 @@
 <!-- sidebar -->
 <ui:define name="sidebar">
  <p>
- Mit dem dem Men&#252;punkt <em>Verwaltung</em> koennen Entit&#228;ten
-(Datens&#228;tze) in den Ticket2Rock Datenbanktabellen angelegt, ver&#228;ndert bzw. geloescht werden.
-Der Men&#252;punkt <em>Andwendungsfall</em> dient zur Ausf&#252;hrung diverser Anwendungsf&#228;lle.
+ Im Menü <em>Verwaltung</em> werden die Ticket2Rock-Entit&#228;ten angelegt, modifiziert bzw. gelöscht.
+ Die <em>Anwendungsfälle</em> sind im gleichnamigen Menü zu finden.
 </p> 
 </ui:define>
 
