Anpassung der Sidebar-Texte.

--- a/web/band.xhtml
+++ b/web/band.xhtml
@@ -82,7 +82,11 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Verwaltung einer Band-Entit&#228;t. Hier erfolgt die Definition des Bandnamens, sowie die Zuweisung zu ein oder mehreren Bandmusikern.</p>
+<p>
+Verwaltung einer Persistent Entity vom Typ <em>Band</em>.
+Hier wird der Name der Band festgelegt.
+Ausserdem k&#246;nnen der Band einer oder mehrere Musiker zugeordnet werden.
+</p>
 </ui:define>
 
 </ui:composition>
