--- a/web/bandlist.xhtml
+++ b/web/bandlist.xhtml
@@ -49,8 +49,11 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Diese Seite zeigt die Liste der Bands an, die als Band Entities existieren. &#220;ber den Button L&#246;schen wird ein Band
-Entity gel&#246;scht. Hierbei werden ebenfalls cascadierend alle zugeh&#246;rigen Songs und Alben der Band gel&#246;scht.
+<p>
+Diese Seite zeigt die Liste der Bands an - modelliert als Persistent Entity <em>Band</em>.
+&#220;ber den Button &#171;L&#246;schen&#187; wird die entsprechende Persistent-Entity-Instanz gel&#246;scht.
+Dabei werden kaskadierend alle zugeh&#246;rigen Songs und Alben der Band gel&#246;scht.
+</p>
 </ui:define>
 
 </ui:composition>
