--- a/web/bestellungen.xhtml
+++ b/web/bestellungen.xhtml
@@ -77,8 +77,10 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Diese Seite zeigt die Bestellungen, die Sie get&#228;tigt haben, aber noch nicht bezahlt wurden. &#220;ber den Button L&#246;schen wird eine Bestellung
-gel&#246;scht.
+<p>
+Diese Seite zeigt alle Bestellungen an, die durchgef&#252;hrt, aber noch nicht bezahlt wurden.
+&#220;ber den Button &#171;L&#246;schen&#187; wird eine Bestellung gel&#246;scht.
+</p>
 </ui:define>
 
 </ui:composition>
