--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -19,8 +19,9 @@
 <!-- sidebar -->
 <ui:define name="sidebar">
  <p>
- Im Menü <em>Verwaltung</em> werden die Ticket2Rock-Entit&#228;ten angelegt, modifiziert bzw. gelöscht.
- Die <em>Anwendungsfälle</em> sind im gleichnamigen Menü zu finden.
+ Im Men&#252; <em>Verwaltung</em> werden die Ticket2Rock-Entit&#228;ten angelegt, modifiziert bzw. gel&#246;scht.
+ <br/>&nbsp;<br/>Die <em>Anwendungsf&#228;lle</em> sind im gleichnamigen Men&#252; zu finden.
+ <br/>&nbsp;<br/>Im Men&#252; <em>Demo</em> wird eine JSP-Demoseite ge&#246;ffnet. <em>Achtung</em>: Sie verlassen hier den Facelet-Sektor!
 </p> 
 </ui:define>
 
