--- a/web/kasse.xhtml
+++ b/web/kasse.xhtml
@@ -91,7 +91,11 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Bezahlung der Tickets, die Sie bestellt haben. Mit der Bezahlung werden die Ticketbestellungen persistiert.
+<p>
+Hier k&#246;nnen alle bestellten Tickets bezahlt werden.
+Erst mit der Bezahlung werden die Ticketbestellungen persistent gespeichert.
+Zuvor "lebten" sie nur in der Web-Session.
+</p>
 </ui:define>
 
 </ui:composition>
