--- a/web/konzertsuchErgebnis.xhtml
+++ b/web/konzertsuchErgebnis.xhtml
@@ -74,7 +74,9 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Ergebnis der Konzertsuche.
+<p>
+Das Ergebnis der Konzertsuche.
+</p>
 </ui:define>
 
 </ui:composition>
