--- a/web/konzertsuche.xhtml
+++ b/web/konzertsuche.xhtml
@@ -59,7 +59,9 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Suche nach Konzert-Events. Anhand des Veranstaltungsort und eines Zeitraums wird nach Konzerten gesucht.</p>
+<p>
+Anhand des Veranstaltungsorts und eines Zeitraums kann hier nach Konzerten gesucht werden.
+</p>
 </ui:define>
 
 </ui:composition>
