--- a/web/reservierungsmeldung.xhtml
+++ b/web/reservierungsmeldung.xhtml
@@ -31,7 +31,9 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Reservierte Tickets werden mit Hilfe einer Stateful Session Bean verwaltet.</p>
+<p>
+Reservierte Tickets werden mit Hilfe einer Stateful Session Bean verwaltet.
+</p>
 </ui:define>
 
 </ui:composition>
