--- a/web/stornierung.xhtml
+++ b/web/stornierung.xhtml
@@ -42,7 +42,11 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Stornieren einer Ticketbestellung. Anhand der Bestellnummer wird die Bestellung identifiziert und storniert. Die Stornierung wird als JMS-Nachricht an das ticket2rock-system gesendet.</p>
+<p>
+Stornieren einer Ticketbestellung.
+Anhand der Bestellnummer wird die Bestellung identifiziert und storniert.
+Die Stornierung wird als JMS-Nachricht an das Ticket2Rock-System gesendet.
+</p>
 </ui:define>
 
 </ui:composition>
