--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -37,7 +37,7 @@
 	<div id="container">
 		<div id="sidebar">
 			<ui:insert name="sidebar">
-			  Default Inhalt fuer die Sidebar
+			  Default-Inhalt fuer die Sidebar.
 			</ui:insert>	
 		</div>
 		<div id="content">
