--- a/web/ticketbestellung.xhtml
+++ b/web/ticketbestellung.xhtml
@@ -60,7 +60,9 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Hier kann ein Benutzer Konzerttickets bestellen -- under construction</p>
+<p>
+Hier kann ein Benutzer Konzerttickets bestellen -- under construction
+</p>
 </ui:define>
 
 </ui:composition>
