--- a/web/ticketkaufmeldung.xhtml
+++ b/web/ticketkaufmeldung.xhtml
@@ -73,7 +73,10 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-<p>Die Ticketbestellungen wurden persistiert. Die Ticketkontingente wurde in den ensprechendern Konzerten angepasst.</p>
+<p>
+Die Ticketbestellungen wurden persistent gespeichert.
+Die Ticketkontingente der betroffenen Konzerte wurden entsprechend angepasst.
+</p>
 </ui:define>
 
 </ui:composition>
