--- a/web/tourneelist.xhtml
+++ b/web/tourneelist.xhtml
@@ -44,7 +44,9 @@
 
 <!-- sidebar -->
 <ui:define name="sidebar">
-Diese Seite zeigt die Liste der Tourneen an, die als Tournee Entities existieren.
+<p>
+Diese Seite zeigt die Liste der Tourneen an - modelliert als Persistent Entity <em>Tournee</em>.
+</p>
 </ui:define>
 
 </ui:composition>
