--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -1,10 +1,10 @@
 <!--
 	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
-	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
+	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets fuer
 	Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
 	
 	Copyright (C) 2006
-	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek,
+	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Joerg, Holger Koschek,
 	Carsten Sahling, Roman Schloemmer
 	
 	This program is free software; you can redistribute it and/or
