--- a/web/konzertsuchErgebnis.xhtml
+++ b/web/konzertsuchErgebnis.xhtml
@@ -50,7 +50,9 @@
 					<f:facet name="header">
 						<h:outputText value="#{msg.konzertsuchergebnis_location}" />
 					</f:facet>
-					<h:outputText value="#{konzert.ort.name}" />
+                    <h:outputLink value="http://#{konzert.ort.koordinaten.googleMapsUrlString}" target="_newwindow">
+                        <h:outputText value="#{konzert.ort.name}" />
+                    </h:outputLink>
 				</h:column>			
 				<h:column>
 					<f:facet name="header">
