--- a/ticket2rock/web/ticketbestellung.xhtml
+++ b/ticket2rock/web/ticketbestellung.xhtml
@@ -50,7 +50,7 @@
           <h:outputText id="ort" value="#{TicketController.konzert.ort.adresse}" />
           <h:outputLabel for="tourneename" value="#{msg.ticketbestellung_tournee}" />
           <h:outputText id="tourneename" value="#{TicketController.konzert.tournee.name}" />
-          <h:outputLabel for="availableExpresseion" value="#{msg.ticketbestellung_ticketkontingent}" />
+          <h:outputLabel for="availableExpression" value="#{msg.ticketbestellung_ticketkontingent}" />
           <h:outputText id="availableExpression" value="#{TicketController.availableTicketsExpression}" />
        </h:panelGrid>
       
