--- a/ticket2rock/web/template.xhtml
+++ b/ticket2rock/web/template.xhtml
@@ -28,7 +28,7 @@
 	  xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 <head>
-	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	<title>Ticket2Rock</title>
 	<link href="style/screen.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="style/office_xp/office_xp.css" />
