* cleared faces-config.xml

--- a/ticket2rock/web/konzertsuchErgebnis.xhtml
+++ b/ticket2rock/web/konzertsuchErgebnis.xhtml
@@ -92,7 +92,7 @@
 				</h:column>
 			</h:dataTable>
 			<br />
-           <h:commandButton class="button" action="newSearch" value="#{msg.konzertsuchergebnis_newsearch}" />						
+           <h:commandButton class="button" action="konzertsuche" value="#{msg.konzertsuchergebnis_newsearch}" />						
 		</h:form>
 
   </div>		
