--- a/ticket2rock/web/konzertsuche.xhtml
+++ b/ticket2rock/web/konzertsuche.xhtml
@@ -70,7 +70,7 @@
 			<div class="input">
 				 <h:commandButton id="submitSearch" class="button" action="#{KonzertController.search}" 
 							value="#{msg.konzertsuche_search}" />&#160;&#160;
-		         <h:commandButton id="submitCancel" class="button" immediate="true" action="cancel" 
+		         <h:commandButton id="submitCancel" class="button" immediate="true" action="home" 
 		        	value="#{msg.konzertsuche_cancel}" />		        		        	
 			</div>
 	    </div>
