--- a/ticket2rock/web/ticketbestellung.xhtml
+++ b/ticket2rock/web/ticketbestellung.xhtml
@@ -70,7 +70,7 @@
 			<div class="input">
 				 <h:commandButton id="submitOrder" class="button" action="#{TicketController.bestelleTickets}" 
 							value="#{msg.ticketbestellung_order}" />&#160;&#160;
-				 <h:commandButton id="submitCancel" class="button" immediate="true" action="cancel" 
+				 <h:commandButton id="submitCancel" class="button" immediate="true" action="konzertsuchErgebnis" 
 		        	value="#{msg.ticketbestellung_cancel}" />		        		        	
 			</div>
 	    </div>
