--- a/ticket2rock/web/band.xhtml
+++ b/ticket2rock/web/band.xhtml
@@ -27,7 +27,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.prime.com.tr/ui" template="template.xhtml">
+	template="template.xhtml">
 
 	<ui:define name="content">
 		<div class="section">
