--- a/ticket2rock/web/index.html
+++ b/ticket2rock/web/index.html
@@ -1,12 +1,13 @@
 <!--
-	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
-	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
-	Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
+	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell" (dpunkt).
+	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets fÃ¼r
+	Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
 	
-	Copyright (C) 2006
-	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek,
-	Carsten Sahling, Roman Schloemmer
-	
+	Copyright (C) 2006-2011
+	Jo Ehm, Stefan M. Heldt, Oliver Ihns, Holger Koschek,
+	Carsten Sahling, Roman Schloemmer, Norman Erck, Daniel SteinhÃ¶fer,
+	Carl A. DÃ¼vel.
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
@@ -20,6 +21,7 @@
 	You should have received a copy of the GNU General Public License
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
 -->
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
