--- a/ticket2rock/web/reservierungsmeldung.xhtml
+++ b/ticket2rock/web/reservierungsmeldung.xhtml
@@ -1,12 +1,13 @@
 <!--
-	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
-	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets fuer
-	Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
+	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell" (dpunkt).
+	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
+	Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
 	
-	Copyright (C) 2006
-	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Joerg, Holger Koschek,
-	Carsten Sahling, Roman Schloemmer
-	
+	Copyright (C) 2006-2011
+	Jo Ehm, Stefan M. Heldt, Oliver Ihns, Holger Koschek,
+	Carsten Sahling, Roman Schloemmer, Norman Erck, Daniel Steinhöfer,
+	Carl A. Düvel.
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
