--- a/ticket2rock/src/main/webapp/template.xhtml
+++ b/ticket2rock/src/main/webapp/template.xhtml
@@ -47,7 +47,7 @@
           <div id="title">
           <table border="0" width="100%" align="center">
             <tr>
-              <td align="left"><img src="images/Ticket2Rock-Logo.jpg" /></td>
+              <td align="left"><img src="images/Ticket2Rock-Logo.png" /></td>
               <td width="45" align="right" valign="bottom">
                 <h:graphicImage styleClass="bag" url="/images/tuete_leer.jpg" rendered="#{!TicketController.ticketOrdered}"/>
                 <h:graphicImage styleClass="bag" url="/images/tuete_ticket.jpg" rendered="#{TicketController.ticketOrdered}"/> 
